[gd_scene load_steps=3 format=3 uid="uid://bnyccj8u1d2j"]

[ext_resource type="Script" path="res://Scripts/point_2outputs.gd" id="1_1jxbh"]
[ext_resource type="Texture2D" uid="uid://bjotexysgxm70" path="res://icon.svg" id="2_7pwv6"]

[node name="Point" type="Node2D"]
script = ExtResource("1_1jxbh")

[node name="Button_top" type="Button" parent="."]
offset_left = 18.0
offset_top = -15.0
offset_right = 26.0
offset_bottom = -7.0

[node name="Button_bot" type="Button" parent="."]
offset_left = 16.0
offset_top = 12.0
offset_right = 24.0
offset_bottom = 20.0

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -12.0
offset_top = -14.0
offset_right = 116.0
offset_bottom = 114.0
scale = Vector2(0.20047, 0.234221)
texture = ExtResource("2_7pwv6")

[connection signal="pressed" from="Button_top" to="." method="_on_button_top_pressed"]
[connection signal="pressed" from="Button_bot" to="." method="_on_button_bot_pressed"]
